--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-image: url(./image.png); background-repeat: no-repeat;background-size: cover;height: 100vh;margin: 0;opacity: 0.5;z-index: 1;">
+<body style="background-image: url(./image.png); background-repeat: no-repeat;background-size: cover;height: 100vh;margin: 0;opacity: 0.5;z-index: 1;opacity: 0.5;">
     <h1>Mountain ranges.</h1>
-    <a href="https://www.witu.org"></a>
+    <a href="https://www.witu.org">witu website</a>
     <h2>Examples of mountain ranges</h2>
     <p>They include the following</p>
     <ul class="a">
